@@ -2,7 +2,7 @@
 
 #define XCHAT_IFACE_MAJOR	1
 #define XCHAT_IFACE_MINOR	9
-#define XCHAT_IFACE_MICRO	8
+#define XCHAT_IFACE_MICRO	9
 #define XCHAT_IFACE_VERSION	((XCHAT_IFACE_MAJOR * 10000) + \
 				 (XCHAT_IFACE_MINOR * 100) + \
 				 (XCHAT_IFACE_MICRO))
@@ -110,6 +110,8 @@ struct _xchat_plugin
 		     char *reserved);
 	void (*xchat_plugingui_remove) (xchat_plugin *ph,
 			void *handle);
+	int (*xchat_emit_print) (xchat_plugin *ph,
+			char *event_name, ...);
 };
 #endif
 
@@ -234,31 +236,39 @@ void
 xchat_plugingui_remove (xchat_plugin *ph,
 			void *handle);
 
+int 
+xchat_emit_print (xchat_plugin *ph,
+		  char *event_name, ...);
+
 #if !defined(PLUGIN_C) && defined(WIN32)
-#define xchat_hook_command ((ph)->xchat_hook_command)
-#define xchat_hook_server ((ph)->xchat_hook_server)
-#define xchat_hook_print ((ph)->xchat_hook_print)
-#define xchat_hook_timer ((ph)->xchat_hook_timer)
-#define xchat_hook_fd ((ph)->xchat_hook_fd)
-#define xchat_unhook ((ph)->xchat_unhook)
-#define xchat_print ((ph)->xchat_print)
-#define xchat_printf ((ph)->xchat_printf)
-#define xchat_command ((ph)->xchat_command)
-#define xchat_commandf ((ph)->xchat_commandf)
-#define xchat_nickcmp ((ph)->xchat_nickcmp)
-#define xchat_set_context ((ph)->xchat_set_context)
-#define xchat_find_context ((ph)->xchat_find_context)
-#define xchat_get_context ((ph)->xchat_get_context)
-#define xchat_get_info ((ph)->xchat_get_info)
-#define xchat_get_prefs ((ph)->xchat_get_prefs)
-#define xchat_list_get ((ph)->xchat_list_get)
-#define xchat_list_free ((ph)->xchat_list_free)
-#define xchat_list_fields ((ph)->xchat_list_fields)
-#define xchat_list_str ((ph)->xchat_list_str)
-#define xchat_list_int ((ph)->xchat_list_int)
-#define xchat_list_next ((ph)->xchat_list_next)
-#define xchat_plugingui_add ((ph)->xchat_plugingui_add)
-#define xchat_plugingui_remove ((ph)->xchat_plugingui_remove)
+#ifndef XCHAT_PLUGIN_HANDLE
+#define XCHAT_PLUGIN_HANDLE (ph)
+#endif
+#define xchat_hook_command ((XCHAT_PLUGIN_HANDLE)->xchat_hook_command)
+#define xchat_hook_server ((XCHAT_PLUGIN_HANDLE)->xchat_hook_server)
+#define xchat_hook_print ((XCHAT_PLUGIN_HANDLE)->xchat_hook_print)
+#define xchat_hook_timer ((XCHAT_PLUGIN_HANDLE)->xchat_hook_timer)
+#define xchat_hook_fd ((XCHAT_PLUGIN_HANDLE)->xchat_hook_fd)
+#define xchat_unhook ((XCHAT_PLUGIN_HANDLE)->xchat_unhook)
+#define xchat_print ((XCHAT_PLUGIN_HANDLE)->xchat_print)
+#define xchat_printf ((XCHAT_PLUGIN_HANDLE)->xchat_printf)
+#define xchat_command ((XCHAT_PLUGIN_HANDLE)->xchat_command)
+#define xchat_commandf ((XCHAT_PLUGIN_HANDLE)->xchat_commandf)
+#define xchat_nickcmp ((XCHAT_PLUGIN_HANDLE)->xchat_nickcmp)
+#define xchat_set_context ((XCHAT_PLUGIN_HANDLE)->xchat_set_context)
+#define xchat_find_context ((XCHAT_PLUGIN_HANDLE)->xchat_find_context)
+#define xchat_get_context ((XCHAT_PLUGIN_HANDLE)->xchat_get_context)
+#define xchat_get_info ((XCHAT_PLUGIN_HANDLE)->xchat_get_info)
+#define xchat_get_prefs ((XCHAT_PLUGIN_HANDLE)->xchat_get_prefs)
+#define xchat_list_get ((XCHAT_PLUGIN_HANDLE)->xchat_list_get)
+#define xchat_list_free ((XCHAT_PLUGIN_HANDLE)->xchat_list_free)
+#define xchat_list_fields ((XCHAT_PLUGIN_HANDLE)->xchat_list_fields)
+#define xchat_list_str ((XCHAT_PLUGIN_HANDLE)->xchat_list_str)
+#define xchat_list_int ((XCHAT_PLUGIN_HANDLE)->xchat_list_int)
+#define xchat_list_next ((XCHAT_PLUGIN_HANDLE)->xchat_list_next)
+#define xchat_plugingui_add ((XCHAT_PLUGIN_HANDLE)->xchat_plugingui_add)
+#define xchat_plugingui_remove ((XCHAT_PLUGIN_HANDLE)->xchat_plugingui_remove)
+#define xchat_emit_print ((XCHAT_PLUGIN_HANDLE)->xchat_emit_print)
 #endif
 
 #ifdef __cplusplus
