@@ -14,6 +14,8 @@
  - Configure script python detection fixes (Johan Dahlin).
  - Added /charset command.
  - Don't auto remove stalled DCCs unless dcc_remove setting is on.
+ - Avoid recursive UserCommand buffer overflow.
+ - Added xchat_emit_print() to plugin interface.
  - 
  - 
 
